force-app/main/default/objects/Siva_sample_setting__c/fields/currency_data__c.field-meta.xml
<CustomField>
    <fullName>currency_data__c</fullName>
    <label>currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>