force-app/main/default/objects/Siva_sample_setting__c/fields/Enable_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Enable_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable</label>
    <type>Checkbox</type>
</CustomField>