force-app/main/default/objects/Siva_sample_setting__c/fields/onboard_date__c.field-meta.xml
<CustomField>
    <fullName>onboard_date__c</fullName>
    <label>onboard_date</label>
    <type>Date</type>
</CustomField>