force-app/main/default/objects/Siva_sample_setting__c/fields/percentage_i__c.field-meta.xml
<CustomField>
    <fullName>percentage_i__c</fullName>
    <label>percentage_i</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>