force-app/main/default/objects/Siva_sample_setting__c/fields/sample_url__c.field-meta.xml
<CustomField>
    <fullName>sample_url__c</fullName>
    <label>sampleUrl</label>
    <type>Url</type>
</CustomField>